RESOLVED FIXED 105251
Fix position:-webkit-sticky behavior when zoomed
https://bugs.webkit.org/show_bug.cgi?id=105251
Summary Fix position:-webkit-sticky behavior when zoomed
Simon Fraser (smfr)
Reported 2012-12-17 21:29:18 PST
Fix position:-webkit-sticky behavior when zoomed
Attachments
Patch (8.39 KB, patch)
2012-12-17 21:31 PST, Simon Fraser (smfr)
no flags
Patch (10.19 KB, patch)
2012-12-18 09:53 PST, Simon Fraser (smfr)
dino: review+
Simon Fraser (smfr)
Comment 1 2012-12-17 21:31:57 PST
Simon Fraser (smfr)
Comment 2 2012-12-17 21:32:30 PST
Simon Fraser (smfr)
Comment 3 2012-12-17 21:32:55 PST
The ref test will fail, because I can't figure out how to hide scrollbars when zoomed. overflow:hidden on the body doesn't do it.
Build Bot
Comment 4 2012-12-17 22:03:03 PST
Comment on attachment 179878 [details] Patch Attachment 179878 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/15399063 New failing tests: fast/css/sticky/sticky-top-zoomed.html
Simon Fraser (smfr)
Comment 5 2012-12-18 09:53:24 PST
Simon Fraser (smfr)
Comment 6 2012-12-18 10:09:12 PST
Simon Fraser (smfr)
Comment 7 2014-07-01 19:38:27 PDT
Further fixing via bug 134535.
Note You need to log in before you can comment on or make changes to this bug.